<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Intro">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="354dp"
        android:layout_height="356dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spiderprueb"
        android:contentDescription="@string/imagenstart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="99dp"
        android:gravity="center"
        android:text="@string/spiderman_quiz_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/startButton" />

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/botonstart"
        android:onClick="ButtonStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/webred" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/botonstart"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constrainedHeight="@+id/startButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startButton" />

</android.support.constraint.ConstraintLayout>