<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="329dp"
        android:layout_height="121dp"
        android:gravity="center"
        android:text="@string/perfiles"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RelativeLayout
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginTop="150dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ListView
            android:id="@+id/listview_question"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textColor="#fff"
            android:layout_alignParentTop="true"
            android:layout_marginTop="116dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/selectUser"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="selectUser"
        android:text="@string/seleccionar_usuario"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/createUser"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="createUserMenu"
        android:text="@string/crear_usuario"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectUser" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/crear_usuario"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectUser" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#fff"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/send"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="createUser"
        android:text="@string/confirmar"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="updatePhoto"
        android:text="@string/modificar"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="deleteUser"
        android:text="@string/eliminar"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="295dp"
        android:layout_height="293dp"
        android:gravity="center"
        android:text=""
        android:textColor="#fff"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/yes"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="deleteUserConfirm"
        android:text="@string/si"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <Button
        android:id="@+id/no"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshapecolor"
        android:textColor="#fff"
        android:onClick="deleteUserDeny"
        android:text="@string/no"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes" />

</android.support.constraint.ConstraintLayout>